--- a/cpts_322_project/cpts_322_project.csproj
+++ b/cpts_322_project/cpts_322_project.csproj
@@ -6,6 +6,7 @@
   
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.10" />
+    <PackageReference Include="PCRE.NET" Version="0.15.0" />
   </ItemGroup>
   
 </Project>
